--- a/css/addcar.css
+++ b/css/addcar.css
@@ -9,6 +9,7 @@ body {
 	margin: 0;
   	padding: 0;
 	font-family: 'Raleway', sans-serif;	
+	background-image: linear-gradient(#002f67, #3385E8);
 }
 
 .top {
@@ -116,8 +117,6 @@ a {
 /*smallest devices*/
 @media screen and (min-width: 200px)
 {
-   	body{
-	  background-image: linear-gradient(black, #3385e8); }
 	.container1 {
 		margin-top: 90px;		
 		width: 250px;
@@ -130,8 +129,6 @@ a {
 /*small devices - this is our preferable size*/
 @media screen and (min-width: 400px)
 {
-   	body{
-	  background-image: linear-gradient(#002f67, #3385E8); }
 	.container1 {	
 		margin-top: 120px;
 		width: 300px;
@@ -151,8 +148,6 @@ a {
 /*medium devices*/
 @media screen and (min-width: 600px)
 {
-	body{
-	  background-image: linear-gradient(red, #3385E8); }
 	.top {
 		height: 300px;
 	}
@@ -178,8 +173,6 @@ a {
 
 @media screen and (min-width: 800px)
 {
-	body{
-	  background-image: linear-gradient(yellow, #3385E8);	}
 	.top {
 		height: 320px;
 	}
@@ -203,8 +196,6 @@ a {
 
 @media screen and (min-width: 1200px)
 {
-	body{
-	  background-image: linear-gradient(green, #3385E8);	}
 	.container1 {	
 		margin-top: 210px;
 		width: 500px;
