--- a/css/forside-css.css
+++ b/css/forside-css.css
@@ -9,7 +9,7 @@ body {
   		font-family: 'Raleway', sans-serif;
 	    margin: 0;
   		padding: 0;
-		background-color: #002f67;
+		background-image: linear-gradient(#002f67, #3385e8);
 }
 
 .wrapper {
@@ -49,9 +49,6 @@ body {
 /*smallest devices*/
 @media screen and (min-width: 200px)
 {
-		body{
-			background-image: linear-gradient(black, #3385e8); }
-
 		.wrapper {
 			margin-top: 25%;
 		}
@@ -69,9 +66,6 @@ body {
 /*small devices - this is our preferable size*/
 @media screen and (min-width: 400px)
 {
-		body{
-			background-image: linear-gradient(#002f67, #3385e8); }
-
 		.wrapper {
 			margin-top: 15%;
 		}
@@ -88,9 +82,6 @@ body {
 /*medium devices*/
 @media screen and (min-width: 600px)
 {
-		body{
-			background-image: linear-gradient(red, #3385e8); }	
-
 		.wrapper {
 			margin-top: 5%;
 		}
@@ -110,9 +101,6 @@ body {
 
 @media screen and (min-width: 800px)
 {
-		body{
-			background-image: linear-gradient(yellow, #3385e8);	}
-
 		.wrapper {
 			margin-top: 10%;
 		}
@@ -132,8 +120,6 @@ body {
 
 @media screen and (min-width: 2000px)
 {
-		body{
-			background-image: linear-gradient(green, #3385e8);	}
 
 		.wrapper {
 			margin-top: 5%;
